# interpreter_ocaml

./: dune-project  interpreter.opam  readme.md
cbn/: comm.ml  dune  env.ml  error.ml  eval.ml  infer.ml  main.ml  memo.md  myParser.mly  print.ml  syntax.ml  ty.ml
cbn/tests/: calc.exp  calc.in  cbn.exp  cbn.in  cbn1.exp  cbn1.in  fun.exp  type.exp  type.in
interpreter/: comm.ml  dune  env.ml  eval.ml  infer.ml  main.ml  memo.md  myLexer.mll  myParser.mly  syntax.ml  ty.ml
interpreter/tests/: calc.exp  fun.exp  fun.in  type.exp
